--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,9 +12,9 @@
 			// If you have changed target frameworks, make sure to update the program path.
 			"program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/dupesfiles2.dll",
 			"args": [
-				"index-update"
-				// "index-add", 
-				// "/home/dh/Downloads/BVGT"
+				// "index-update"
+				"index-add",
+				"/home/dh/Downloads/BVGT"
 				// "index-scan"
 			],
 			"cwd": "${workspaceFolder}",
