--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
 			"request": "launch",
 			"preLaunchTask": "build",
 			// If you have changed target frameworks, make sure to update the program path.
-			"program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/dupesfiles2.dll",
+			"program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/dupefiles2.dll",
 			"args": [
 				// "index-update"
 				// "index-add",
