--- a/dupefiles2.csproj
+++ b/dupefiles2.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp5</TargetFramework>
+    <Version>1.0.1</Version>
+    <FileVersion>1.0.1</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
