--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,9 +13,7 @@
 			"program": "${workspaceFolder}/bin/Debug/netcoreapp5/dupefiles2.dll",
 			"args": [
 				// "index-update"
-				// "index-add",
-				// "/home/dh/Downloads"
-				"index-scan"
+				// "index-scan"
 			],
 			"cwd": "${workspaceFolder}",
 			// For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
